# cargo-edit-completion

./: Cargo.toml  README.md  _cargo-add
src/: main.rs
src/lib/: crates.rs  lib.rs
